# notion-wrapper

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
apps/: appflowy.json  chatgpt.json  claude.json  notion.json  siyuan.json
public/: index.html
scripts/: build-app.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
