[package]
name = "webapp-wrapper"
version = "0.1.0"
description = "Generic webapp wrapper for Linux desktop"
authors = ["animalink"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
